# Forza-Horizon-6-Time-Attack-Tracker

./: .gitignore  Excel erstellen.bat  LICENSE  README.md  RELEASE_POST.md  Runde aufnehmen.bat  Tracker starten.bat  build_car_images.py  car_meta.csv  car_names.csv  circuits.csv  fh6_tracker_app.py  pyproject.toml  races.csv
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: info.md
docs/screenshots/: README.md
fh6tracker/: __init__.py  analysis.py  backup.py  circuits.py  engine.py  excel_export.py  gate.py  geometry.py  ghost.py  races.py  recorder.py  rivals.py  rivals_probe.py  session.py  snapshot.py  storage.py  telemetry.py  traces.py  tracker.py  update_check.py  util.py  webserver.py
tests/: test_analysis.py  test_backup.py  test_delete.py  test_engine.py  test_gate.py  test_ghost.py  test_lap_timing.py  test_modus.py  test_personal_best.py  test_races.py  test_rivals.py  test_snapshot.py  test_storage_migration.py  test_telemetry.py  test_telemetry_live.py  test_update_check.py  test_user_data.py
web/: index.html  sounds.html  telemetry.html
