[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fh6-lap-tracker"
version = "0.2.0"
description = "Open-World Time-Attack Rundenzeiten-Tracker fuer Forza Horizon 6 (read-only Data Out)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[project.scripts]
fh6-record = "fh6tracker.recorder:main"

[tool.setuptools]
packages = ["fh6tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
